# data-standardizer

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  ADDITIONAL_IMPROVEMENTS.md  BUG_FIXES_SUMMARY.md  CATEGORY_COLUMN_FIX.md  CLEANUP_CHANGES_SUMMARY.md  CLEANUP_SUMMARY.md  COMPREHENSIVE_IMPROVEMENTS.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  ERROR_FIXES_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  INTEGRATION_SUMMARY.md  LICENSE  MODULE_INTEGRATION_GUIDE.md  Makefile  PRODUCTION_CHECKLIST.md  PRODUCTION_CLEANUP.md  PRODUCTION_CLEANUP_COMPLETE.md  PRODUCTION_READINESS_SUMMARY.md  PRODUCTION_READY.md  PRODUCTION_SUMMARY.md  PR_DESCRIPTION.md  README.DOCKER.md  README.md  README_PRODUCTION.md  REPOSITORY_ANALYSIS_REPORT.md  ROBUSTNESS_AND_QUALITY_IMPROVEMENTS.md  STREAMLIT_CLOUD_DEPLOYMENT.md  STREAMLIT_RESTORATION.md  UI_IMPROVEMENTS_SUMMARY.md  WORKFLOW_INTEGRATION_STATUS.md  app.py  check_dependencies.py  dash_app.py  (+17 more)
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.streamlit/: README.md  config.toml  secrets.toml.example
api/: app.py
config/: __init__.py  production.env  production.py
core/: jobs.py  schemas.py  tasks.py
core/services/: audit.py  interpretation.py  mapping.py  validation.py
data/: .gitkeep
deployment/: README.md
docs/: ARCHITECTURE.md  DEPLOYMENT.md  INDEX.md  PRODUCTION_CLEANUP_SUMMARY.md  PRODUCTION_GUIDE.md  PRODUCTION_READY_SUMMARY.md  PRODUCTION_SUMMARY.md
examples/: standalone_usage.py
jobs/: worker.py
pages/: 1_About.py
scripts/: deploy.bat  deploy.sh
tests/: __init__.py  conftest.py  test_column_utils.py  test_file_handler.py  test_security_formulas.py  test_validator.py
tests/unit/: test_breakpoint_interpreter.py  test_glass_exporter.py  test_glass_validator.py  test_helpers.py  (+1 more)
utils/: __DEPRECATED_STREAMLIT_FILES__.md  __init__.py  age_transformer.py  amr_analytics.py  amr_data_quality.py  amr_interface.py  app_config.py  app_settings.py  ast_detector.py  breakpoint_interpreter.py  breakpoints.py  cache_manager.py  column_mapper.py  column_utils.py  config.py  data_filter.py  data_profiler.py  data_quality.py  deduplicator.py  enhanced_amr_analytics.py  enhanced_amr_interface.py  enhanced_quality_reporter.py  error_handler.py  excel_exporter.py  file_handler.py  file_merger.py  glass_exporter.py  glass_standardizer.py  glass_validator.py  glass_wizard.py  health_endpoint.py  health_monitor.py  helpers.py  logger.py  mapping_history.py  performance_monitor.py  production_error_handler.py  production_logger.py  retry_handler.py  schema_analyzer.py  (+14 more)
(+3 files in other folders)
